...
                prefixIcon: IconButton(
                  tooltip: '搜索',
                  icon: const Icon(Icons.search),
                  onPressed: _search,
                ),
                suffixIcon: IconButton(
                  tooltip: '执行搜索',
                  icon: const Icon(Icons.arrow_forward_rounded),
                  onPressed: _search,
                ),
              ),
              onChanged: (_) => _resetQuery(),
              onSubmitted: (_) => _search(),
...
