...
                            () => Navigator.push(
                              context,
                              HorizontalCoverPageRoute(
                                builder: (_) => const SourceSettingsPage(),
                              ),
                            ),
                        child: const Text('选择书源'),
                      ),
                    ],
                  ),
                ),
              )
              : TabBarView(
...
